--- a/M2_Assignment/index.html
+++ b/M2_Assignment/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Module2 Assignment norum666</title>
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<h1>Hello Coursera</h1>
+<h1>M2 Assignment norum666</h1>
+	<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<p1>Starter</p1>
+		<br></br>
+		<br></br>
+		<p4 class="tekst">Lorem ipsum dolor sit amet, ut quas illud mundi sea, eripuit philosophia sed no, cu suscipiantur interpretaris ius. Fugit audire antiopam in nec. Quis vidit conceptam no nec. Eu vim soleat pertinacia</p4>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<p2>Main Dish</p2>
+		<br></br>
+		<br></br>
+		<p4 class="tekst">Lorem ipsum dolor sit amet, ut quas illud mundi sea, eripuit philosophia sed no, cu suscipiantur interpretaris ius. Fugit audire antiopam in nec. Quis vidit conceptam no nec. Eu vim soleat pertinacia</p4>
+	</div>
+	<div class="col-lg-4 col-md-12 col-sm-12">
+		<p3>Dessert</p3>
+		<br></br>
+		<br></br>
+		<p4 class="tekst">Lorem ipsum dolor sit amet, ut quas illud mundi sea, eripuit philosophia sed no, cu suscipiantur interpretaris ius. Fugit audire antiopam in nec. Quis vidit conceptam no nec. Eu vim soleat pertinacia</p4>
+		</div> 
+	</div>
 </body>
 </html>
